--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,38 +28,32 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: ec2-34-199-78-49.compute-1.amazonaws.com
-        username: ec2-user
-        key: |
-        -----BEGIN RSA PRIVATE KEY-----
-MIIEpAIBAAKCAQEAxOudxJgH8we4CGwP+IuqGf2OY1qYV1WmFyWhH4Ach8mfJ+ob
-eFNFQfc/hU9YDOVYii/JyhAIcTHVr60LiI4x3QnwsguDAXOk63WOw+vd8UFN4frt
-/LjxPyUwUFH1ZgwOk/gNsqs9gvkR/i1g3ESupqpa+GjsrZD4cKlHmmM4xwjNHnuk
-sPJNYNEtO7vRk54WloLKAp2SaZiSsAn7SHB0hSNEU+MHZ14udRcK8ulFjqvga2G3
-7JP2CiVPwLJymTvunyi1whCqBIMu1GPU4xJzaqlCbQ/EfoqfB1BZw3hPJgjo+zar
-GTLvHKPhBa8k6aMEJ9zmFHvLIR0CAIcTk1i+HwIDAQABAoIBAFlIQsXp8GC+NTCM
-XklgeYVDMxXU85FVYfLIut7fZRAj2Cduu3m4t4QLKB+3M8LVEWnF9QXKcylvYOU/
-3iTR48XGRf1TvtgfqLyhFlO6U2yZIUi+Trzw1WC96cPhBRR5jvqD0yIZBdCmQQQv
-auUztsQWJRzP5c9kFWBvP+m95vZGOOLxJmURWd0Y0kAF0aafOXOshWBgXRarwAiI
-JwEf289dyfqGp7zU3s+lGOlTjA8Uaicn5uUJda5d6f3Wk8DV65xNwPy/4kvpXozd
-uQdrzHz+M5IocDUSaWnKMvset4cPgu3Ez259buKQqhiSmJsdNcAveuCjjepgJaAi
-5cOfioECgYEA9V/miojWkJ5QbsjnftV/9NjYr9NmlLuO/BaYzc/Q8YtvC6U6e0RG
-rtr+c9kK8GJkGRjfw+xAlwMCUxf1yCRTrMqqvTiwddA8noHV5Fske1GDhejXVTxw
-Kotm14giePqgyY2lDedyNMQJEDvVunrHC6akckrmd+i8/Hd+1jMi8H8CgYEAzXKT
-kwehVoZYBACoGB6EafuBq2G891ANfl7JUV6UaCdM7Xdtgw+QW/stCd9mZLojeslD
-RDzWcNQ0nHGX1GJ0qw60Ij+V3oikJBfLa6LauRPwDqLSj+pBNAV4VEzK94fTE0Tn
-8qpyti0eJOHLWFw79PFzxO1INj0G4tAAfJd1YmECgYEAvq9iR7KDnCuLsixqyoQ8
-Rhjme+07QMZpHbqp0Pd5Ft0W1OP4iKbMj0IckAbRm3G6/E36RxWoNDLgcZajKIAi
-jpuJCDev2j6TfVLE2AuEVFlKbpw+Cz1GpaljqIdg0sdigH+VDzMX662UpYr6U0rq
-uEEudquCYxj5FPIAHZHryx0CgYB4dYelm8GzU83jeucUTUBiS78513LOpzdiMv1j
-Ikttzi1CxtWFFOkVpW5A7aXBxYnsAnnYVrt9KE84sznMo3W4nkRsGFAtTHzBVNpG
-4BPSlKgaTMmc7EMS12o4M1aGUDMohyxgkiP0QPv9sA5kXqAg/Dle66l9c8bH0iGW
-6889wQKBgQCZs1c8b3v+KU5w4uGhCDWdm2cKTHBQ2vWTq2IBvHIYfBcCxjC8GDXR
-n5UsWX1/O8xmvjtYw0D8ijs3pIX0kkVz3fX1xldDIbtijCMz1FTqUQZp5EH51Llb
-GIT8uO8M0WoI7aQlu6Z3bezxruS1UmdbXYWjdFFTjNZot6tu0ENs5Q==
------END RSA PRIVATE KEY-----
+        username: ubuntu
+        key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          cd /home/ec2-user/brmh-backend
+          cd /home/ubuntu/brmh-backend
           git pull origin main
           npm install
           npm run build
-          pm2 restart all || pm2 start npm --name "brmh-backend" -- start 
+          # Install PM2 globally with sudo
+          sudo npm install -g pm2
+          # Stop any existing instances
+          pm2 stop brmh-backend || true
+          pm2 delete brmh-backend || true
+          # Start the application as a system service
+          pm2 start npm --name "brmh-backend" -- start
+          # Save PM2 process list
+          pm2 save
+          # Remove any existing startup script
+          sudo pm2 unstartup systemd || true
+          # Generate new startup script
+          sudo env PATH=$PATH:/usr/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
+          # Reload systemd daemon
+          sudo systemctl daemon-reload
+          # Enable and start the PM2 service
+          sudo systemctl enable pm2-ubuntu
+          sudo systemctl start pm2-ubuntu
+          # Verify the service is running
+          sudo systemctl status pm2-ubuntu
+          # Check PM2 status
+          pm2 status 
