--- a/pinterest-api.yaml
+++ b/pinterest-api.yaml
@@ -5,11 +5,11 @@ info:
   description: API endpoints for Pinterest OAuth and data fetching
 
 servers:
-  - url: http://localhost:5000
+  - url: http://localhost:4000
     description: Pinterest API proxy server
 
 paths:
-  /api/pinterest/token:
+  /token:
     post:
       summary: Exchange authorization code for access token
       operationId: getPinterestToken
@@ -66,7 +66,7 @@ paths:
                   error:
                     type: string
 
-  /api/pinterest/test:
+  /test:
     post:
       summary: Test Pinterest API endpoints
       operationId: testPinterestApi
