--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,16 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '20'
+        cache: 'npm'
         
     - name: Install dependencies
-      run: npm install
-      
+      run: |
+        npm ci
+        
     - name: Build application
-      run: npm run build
-      
+      run: |
+        npm run build
+        
     - name: Deploy to AWS
       uses: appleboy/ssh-action@master
       with:
@@ -33,10 +36,9 @@ jobs:
         script: |
           cd /home/ubuntu/brmh-backend
           git pull origin main
-          npm install
-          npm run build
-          # Install PM2 globally with sudo
-          sudo npm install -g pm2
+          npm ci --only=production
+          # Install PM2 globally with sudo if not already installed
+          which pm2 || sudo npm install -g pm2
           # Stop any existing instances
           pm2 stop brmh-backend || true
           pm2 delete brmh-backend || true
@@ -44,16 +46,9 @@ jobs:
           pm2 start npm --name "brmh-backend" -- start
           # Save PM2 process list
           pm2 save
-          # Remove any existing startup script
-          sudo pm2 unstartup systemd || true
-          # Generate new startup script
-          sudo env PATH=$PATH:/usr/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
-          # Reload systemd daemon
-          sudo systemctl daemon-reload
-          # Enable and start the PM2 service
-          sudo systemctl enable pm2-ubuntu
-          sudo systemctl start pm2-ubuntu
+          # Setup PM2 startup script if not already setup
+          pm2 startup systemd -u ubuntu --hp /home/ubuntu || true
+          # Save PM2 process list again to ensure it persists across reboots
+          pm2 save
           # Verify the service is running
-          sudo systemctl status pm2-ubuntu
-          # Check PM2 status
-          pm2 status 
+          pm2 list 
