--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,16 +17,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '20'
-        cache: 'npm'
         
     - name: Install dependencies
-      run: |
-        npm ci
-        
-    - name: Build application
-      run: |
-        npm run build
-        
+      run: npm install
+      
     - name: Deploy to AWS
       uses: appleboy/ssh-action@master
       with:
@@ -36,9 +30,9 @@ jobs:
         script: |
           cd /home/ubuntu/brmh-backend
           git pull origin main
-          npm ci --only=production
-          # Install PM2 globally with sudo if not already installed
-          which pm2 || sudo npm install -g pm2
+          npm install
+          # Install PM2 globally with sudo
+          sudo npm install -g pm2
           # Stop any existing instances
           pm2 stop brmh-backend || true
           pm2 delete brmh-backend || true
@@ -46,9 +40,16 @@ jobs:
           pm2 start npm --name "brmh-backend" -- start
           # Save PM2 process list
           pm2 save
-          # Setup PM2 startup script if not already setup
-          pm2 startup systemd -u ubuntu --hp /home/ubuntu || true
-          # Save PM2 process list again to ensure it persists across reboots
-          pm2 save
+          # Remove any existing startup script
+          sudo pm2 unstartup systemd || true
+          # Generate new startup script
+          sudo env PATH=$PATH:/usr/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
+          # Reload systemd daemon
+          sudo systemctl daemon-reload
+          # Enable and start the PM2 service
+          sudo systemctl enable pm2-ubuntu
+          sudo systemctl start pm2-ubuntu
           # Verify the service is running
-          pm2 list 
+          sudo systemctl status pm2-ubuntu
+          # Check PM2 status
+          pm2 status 
