--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "js-yaml": "^4.1.0",
     "nanoid": "^5.1.5",
     "openapi-backend": "^5.11.1",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "yaml": "^2.7.1"
   },
   "devDependencies": {
+    "@stoplight/prism-cli": "^5.14.2",
     "nodemon": "^3.1.0"
   },
   "directories": {
