--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.540.0",
+    "@aws-sdk/client-dynamodb": "^3.808.0",
+    "@aws-sdk/client-s3": "^3.808.0",
     "@aws-sdk/client-sns": "^3.772.0",
     "@aws-sdk/client-sqs": "^3.540.0",
-    "@aws-sdk/lib-dynamodb": "^3.540.0",
-    "axios": "^1.6.7",
+    "@aws-sdk/lib-dynamodb": "^3.808.0",
+    "@aws-sdk/s3-request-presigner": "^3.808.0",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "formidable": "^3.5.4",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
     "openapi-backend": "^5.11.1",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
