--- a/swagger/unified-api.yaml
+++ b/swagger/unified-api.yaml
@@ -746,3 +746,102 @@ paths:
       responses:
         '204':
           description: Method deleted successfully 
+
+  /table/create:
+    post:
+      operationId: createTableByName
+      summary: Create a DynamoDB table by name
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [tableName]
+              properties:
+                tableName:
+                  type: string
+      responses:
+        '201':
+          description: Table created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  tableName:
+                    type: string
+        '409':
+          description: Table already exists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+
+  /table/{tableName}/count:
+    get:
+      operationId: getTableItemCount
+      summary: Get total number of items in a DynamoDB table
+      parameters:
+        - name: tableName
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Name of the DynamoDB table
+      responses:
+        '200':
+          description: Successfully retrieved item count
+          content:
+            application/json:
+              schema:
+                type: object
+                required: ["count"]
+                properties:
+                  count:
+                    type: integer
+                    description: Total number of items in the table
+                  tableName:
+                    type: string
+                    description: Name of the table
+        '404':
+          description: Table not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string 
