--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "js-yaml": "^4.1.0",
+    "jsonrepair": "^3.12.0",
     "nanoid": "^5.1.5",
     "openapi-backend": "^5.11.1",
     "swagger-ui-express": "^5.0.1",
