--- a/swagger/unified-api.yaml
+++ b/swagger/unified-api.yaml
@@ -4,9 +4,6 @@ info:
   version: 1.0.0
   description: Unified API for handling schemas, namespaces, and API execution
 
-servers:
-  - url: /unified
-    description: Unified API server
 
 paths:
   # Schema Operations
@@ -92,18 +89,18 @@ paths:
               required: ["schemaName", "schema"]
               properties:
                 methodId:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                 schemaName:
                   type: string
                 methodName:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                 namespaceId:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                 schemaType:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                 schema:
                   type: object
@@ -111,7 +108,7 @@ paths:
                   type: boolean
                   default: false
                 originalType:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                 url:
                   type: string
@@ -201,21 +198,16 @@ paths:
                 tableName:
                   type: string
       responses:
-        '200':
+        '201':
           description: Table created successfully
           content:
             application/json:
               schema:
                 type: object
-                required: ["message", "tableName", "schemaId", "metaId"]
                 properties:
                   message:
                     type: string
                   tableName:
-                    type: string
-                  schemaId:
-                    type: string
-                  metaId:
                     type: string
 
   /schema/table-meta:
@@ -686,7 +678,7 @@ paths:
                 response-schema:
                   type: object
                 schemaId:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                   description: Reference to the schema for this namespace or method
                   default: null
@@ -757,17 +749,17 @@ paths:
                 response-schema:
                   type: object
                 schemaId:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                   description: Reference to the schema for this namespace or method
                   default: null
                 namespace-method-tableName:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                   description: Table name for this method
                   default: null
                 tableName:
-                  type: ["string", "null"]
+                  type: string
                   nullable: true
                   description: Table name for this method (backward compatibility)
                   default: null
@@ -883,4 +875,331 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string 
+                    type: string
+
+  # Memory-enabled LLM Operations
+  /llm/generate-schema-with-memory:
+    post:
+      operationId: generateSchemaWithMemory
+      summary: Generate schema with conversational memory
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: ["prompt", "sessionId"]
+              properties:
+                prompt:
+                  type: string
+                  description: The prompt for schema generation
+                sessionId:
+                  type: string
+                  description: Session ID for conversation memory
+                context:
+                  type: string
+                  description: Additional context for the generation
+                  nullable: true
+      responses:
+        '200':
+          description: Schema generated successfully with memory
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  schema:
+                    type: object
+                  conversationId:
+                    type: string
+                  message:
+                    type: string
+
+  /llm/generate-schema-from-prompt-with-memory:
+    post:
+      operationId: generateSchemaFromPromptWithMemory
+      summary: Generate schema from prompt with memory
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: ["prompt", "sessionId"]
+              properties:
+                prompt:
+                  type: string
+                  description: The prompt for schema generation
+                sessionId:
+                  type: string
+                  description: Session ID for conversation memory
+      responses:
+        '200':
+          description: Schema generated successfully from prompt with memory
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  schema:
+                    type: object
+                  conversationId:
+                    type: string
+                  message:
+                    type: string
+
+  /llm/conversational-chat:
+    post:
+      operationId: conversationalChat
+      summary: Conversational chat with memory
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: ["message", "sessionId"]
+              properties:
+                message:
+                  type: string
+                  description: The user message
+                sessionId:
+                  type: string
+                  description: The session ID for memory
+                userId:
+                  type: string
+                  description: The user ID
+                context:
+                  type: string
+                  description: The context (schema, lambda, etc.)
+                metadata:
+                  type: object
+                  description: Additional metadata
+      responses:
+        '200':
+          description: Chat response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  response:
+                    type: string
+                  error:
+                    type: string
+
+  /llm/conversation-history:
+    get:
+      operationId: getConversationHistory
+      summary: Get conversation history for a session
+      parameters:
+        - in: query
+          name: sessionId
+          schema:
+            type: string
+          required: true
+          description: The session ID
+      responses:
+        '200':
+          description: Conversation history
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  history:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        MessageId:
+                          type: string
+                        Role:
+                          type: string
+                        Content:
+                          type: string
+                        Timestamp:
+                          type: string
+                        CreatedAt:
+                          type: string
+                  error:
+                    type: string
+
+  /llm/clear-conversation:
+    post:
+      operationId: clearConversationHistory
+      summary: Clear conversation history for a session
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: ["sessionId"]
+              properties:
+                sessionId:
+                  type: string
+                  description: The session ID
+      responses:
+        '200':
+          description: Clear response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string
+
+  /llm/user-sessions:
+    get:
+      operationId: getUserSessions
+      summary: Get all user sessions
+      parameters:
+        - in: query
+          name: userId
+          schema:
+            type: string
+          required: false
+          description: The user ID
+      responses:
+        '200':
+          description: User sessions
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  sessions:
+                    type: array
+                    items:
+                      type: object
+                  error:
+                    type: string
+
+  /llm/generate-lambda-with-memory:
+    post:
+      operationId: generateLambdaWithMemory
+      summary: Generate Lambda function with conversational memory
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: ["prompt", "sessionId"]
+              properties:
+                prompt:
+                  type: string
+                  description: The prompt for Lambda generation
+                sessionId:
+                  type: string
+                  description: Session ID for conversation memory
+                context:
+                  type: string
+                  description: Additional context
+                  nullable: true
+      responses:
+        '200':
+          description: Lambda function generated successfully with memory
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: object
+                  conversationId:
+                    type: string
+                  message:
+                    type: string
+
+  /llm/contextual-assistance:
+    post:
+      operationId: getContextualAssistance
+      summary: Get contextual assistance with memory
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: ["query", "sessionId"]
+              properties:
+                query:
+                  type: string
+                  description: The user's query
+                sessionId:
+                  type: string
+                  description: Session ID for conversation memory
+                context:
+                  type: string
+                  description: Additional context
+                  nullable: true
+      responses:
+        '200':
+          description: Contextual assistance provided
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  assistance:
+                    type: string
+                  conversationId:
+                    type: string
+                  message:
+                    type: string
+
+  # AI Agent Operations
+  /ai-agent:
+    post:
+      operationId: aiAgent
+      summary: AI Agent for API development assistance
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: ["message"]
+              properties:
+                message:
+                  type: string
+                  description: User message to the AI agent
+                namespace:
+                  type: object
+                  nullable: true
+                  description: Optional namespace context
+                action:
+                  type: string
+                  nullable: true
+                  description: Optional action type
+      responses:
+        '200':
+          description: AI Agent response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  content:
+                    type: string
+                    description: AI response message
+                  metadata:
+                    type: object
+                    properties:
+                      type:
+                        type: string
+                        enum: ['api', 'schema', 'test', 'auth', 'general']
+                      data:
+                        type: object
+                        description: Structured data from AI response 
