--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.56.0",
     "@aws-sdk/client-dynamodb": "^3.540.0",
     "@aws-sdk/client-sns": "^3.772.0",
     "@aws-sdk/client-sqs": "^3.540.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
-    "@langchain/anthropic": "^0.2.0",
+    "@langchain/anthropic": "^0.3.24",
     "@langchain/community": "^0.3.47",
-    "@langchain/core": "^0.2.0",
+    "@langchain/core": "^0.3.62",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "js-yaml": "^4.1.0",
     "jsonrepair": "^3.12.0",
-    "langchain": "^0.2.0",
+    "langchain": "^0.3.29",
     "nanoid": "^5.1.5",
     "openapi-backend": "^5.11.1",
     "swagger-ui-express": "^5.0.1",
